# NAMELightCube

./: README.md
Blender Animation Scene/: Blender Light cube scene.blend  temp1_LargeCube.txt
Firmware/: CMakeLists.txt
Firmware/CubeController16x16x16/: CMakeLists.txt  CubeController16x16x16.c
Firmware/CubeController8x8x32/: CMakeLists.txt  CubeController8x8x32.c
Graphics/: BCA_multicube.py  BCA_multicube_SimplyInterface.py  BlenderAnimationPlayer.py  Depricate - BinaryCollisionApproximation3DLED.py  EventBasedCubeUpdate.py  lightCubeUtil.py
Graphics/ImageArrays/: NAME_YellowDots1.txt
